                               Release History
===========================================================================

3.7 to 3.7.1: (xxxx xx, 2012)

  * Improved TIA emulation with ROMs that have too few or too many
    scanlines; the output is now blanked as on a real TV.  Special thanks
    to Omegamatrix of AtariAge for test ROMs in this area.

  * Fixed several bugs in DPC+ bankswitching scheme, including ability to
    load and save state files.  As well, ROMs now work correctly after
    console format autodetection.

-Have fun!


3.6.1 to 3.7: (June 1, 2012)

  * Added Blargg TV effects, with presets for Composite, S-video, RGB,
    and badly adjusted TV, and well as a custom mode with full
    configurability of contrast, brightness, gamma, etc.  Many
    keyboard shortcuts and commandline arguments were added to support
    this; see the documentation for a detailed explanation.  These
    effects are OpenGL-only.  Special thanks to Ian Bogost and the
    Georgia Tech Atari Team for the preliminary implementation.

  * Updated the CompuMate keyboard handler to recognize more keys on an
    actual keyboard, instead of having to remember the weird combinations
    used on the original CompuMate keyboard (although those original keys
    will continue to work).  Related to this, fixed bug whereby
    'ghost keys' would be detected by the CompuMate, particularly after
    pressing 'Enter' to start a game from the ROM launcher.

  * Added emulation for MindLink controller using the mouse; the 'Bionic
    Breakthrough' and 'Telepathy' ROMs now work.

  * Updated FA2 bankswitch scheme (Star Castle) to emulate load/save
    high score functionality to the Harmony cart flash RAM.

  * Added ability for ROM launcher to 'descend' into ZIP files when it
    contains more than one ROM file.  This means you no longer have to
    unzip a multi-file archive before using each ROM.  Thanks go to Roland