@@ -10,7 +10,7 @@
   <br><br>
   <center><h2><b>A multi-platform Atari 2600 VCS emulator</b></h2></center>
 
-  <center><h4><b>Release 3.7</b></h4></center>
+  <center><h4><b>Release 3.7.1</b></h4></center>
   <br><br>
 
   <center><h2><b>User's Guide</b></h2></center>
@@ -1553,9 +1553,15 @@
     </tr>
 
     <tr>
-      <td>Toggle display palette (<i>NTSC/PAL/SECAM</i>)</td>
+      <td>Toggle console type in increasing order (<i>NTSC/PAL/SECAM, etc)</i>)</td>
       <td>Control + f</td>
       <td>Control + f</td>
+    </tr>
+
+    <tr>
+      <td>Toggle console type in decreasing order (<i>NTSC/PAL/SECAM, etc)</i>)</td>
+      <td>Shift-Control + f</td>
+      <td>Shift-Control + f</td>
     </tr>
 
     <tr>
