@@ -22,7 +22,7 @@
 
 #include <cstdlib>
 
-#define STELLA_VERSION "3.8_svn"
+#define STELLA_VERSION "3.7.1_pre"
 #define STELLA_BUILD atoi("$Rev$" + 6)
 
 #endif
